--- a/Test visualization here/PLOTLY IDEA/World_Happiness/index.html
+++ b/Test visualization here/PLOTLY IDEA/World_Happiness/index.html
@@ -32,10 +32,13 @@
           <img src="static/images/globe.svg" width="100" height="100" class="logo" alt="">
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="/" class="d-inline-block align-top" alt="Home">World Happiness: 2021</a></li>
+              <li class="nav-item"><a class="nav-link" href="/" class="d-inline-block align-top" alt="Home">World
+                  Happiness: 2021</a></li>
               <li class="nav-item"><a class="nav-link" href="templates/about.html">About Us: Error 404</a></li>
-              <li class="nav-item"><a class="nav-link" href="templates/Nehir_leaflet.html" target="_blank">Nehir: Leaflet</a></li>
-              <li class="nav-item"><a class="nav-link" href="https://github.com/yaparnehir/Final_Project" target="_blank">GitHub</a>
+              <li class="nav-item"><a class="nav-link" href="templates/Nehir_leaflet.html" target="_blank">Nehir:
+                  Leaflet</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://github.com/yaparnehir/Final_Project"
+                  target="_blank">GitHub</a>
               </li>
             </ul>
           </div>
@@ -70,24 +73,67 @@
             <div id="sample-metadata" class="panel-body"></div>
         </div> </b>
       </div>
-      <!-- <DISPALY Horizontal Bar Chart> -->
-      <div class="col-md-5">
-        <!-- <DISPALY Gauge Chart> -->
-        <div class="col-md-3">
-          <div class="guage">
-            <div id="gauge"></div>
+      <!-- <DISPALY OverView ParaGraph> -->
+
+
+      <!---->
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="summary-shape">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="summary-title">
+                  <h1><strong><u>OverView</u></strong></h1>
+                  <h3><strong>A Little Break Down:</strong></h3>
+                </div>
+                <div class="summary-text">
+                  <br>
+                  <h5><b>Our Goal</b></h5>
+                  <p>We are Group 4:Error 404, we undertook the task of trying to understan the influential factors
+                    impacting the happiness of a
+                    country while determing the accuracy of such factors and claims.The factors in question are:<em>
+                      LOGGED
+                      GDP PER CAPITA, SOCIAL SUPPORT,
+                      HEALTHY LIFE EXPECTANCY, FREEDOM TO MAKE LIFE CHOICES, GENEROSITY, PERCEPTIONS OF CORRUPTION,
+                      INDEX
+                      OF INSTITUTIONAL TRUST,
+                      GINI COEFFICIENT OF INCOME(leves of income inequality),</em> and <em>UNEMP_SCORE(Unemployment
+                      rating at given
+                      time)</em>.</p>
+                  <h5><b>Challenges Faced</b></h5>
+                  <p>As we progressed carrying out ETL process for the data we realized our original large data had
+                    shrunk(in number of dimensions) due to the
+                    elimination of unneccessary/noisy data. Although the data being used was relevant and impacted
+                    "Happiness Score" we realized the dilema, information on how the scores were assigned was excluded
+                    from the source as well as, the mathematical
+                    computations and formulas to derive
+                    these results had been made exclusive/confidential. Our effort to find more relevant data that could
+                    impact a country/countries happiness
+                    became a more arduuos task than we realized since we had to ensure the integrity and accuracy of the
+                    data being merged.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div id="bar"></div>
+        <!-- <DISPALY Gauge Chart> -->
+        <div class="row">
+          <div class="col-md-2">
+            <div class="guage">
+              <div id="gauge"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <!-- <DISPALY Tableau> -->
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
     </div>
-    <div class=col-lg-12>
+    <div class=col-lg-10>
       <div class='tableauPlaceholder' id='viz1653145656612' style='position: relative'><noscript><a href='#'><img
               alt='Happiness '
               src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wo&#47;WorldHappinessPrediction&#47;Happiness&#47;1_rss.png'
@@ -112,7 +158,10 @@
         type='text/javascript'>                    var divElement = document.getElementById('viz1653145656612'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1227px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
       <br>
     </div>
-
+    <!-- <DISPALY Horizontal Bar Chart> -->
+    <div class="col-md-5">
+      <div id="bar"></div>
+    </div>
 
 
 
