--- a/Visual_Backup/World_Happiness/index.html
+++ b/Visual_Backup/World_Happiness/index.html
@@ -84,7 +84,7 @@
               <div class="col-md-12">
                 <div class="summary-title">
                   <h1><strong><u>OverView</u></strong></h1>
-                  <h3><strong>A Little Break Down:</strong></h3>
+                  <h3><strong>A Little Breakdown:</strong></h3>
                 </div>
                 <div class="summary-text">
                   <br>
@@ -128,40 +128,59 @@
     </div>
 
     <!-- <DISPALY Tableau> -->
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
+    <div class="info-map-chart">
+      <div class="col-lg-6">
+        <div class='tableauPlaceholder' id='viz1653668618938' style='position: relative'><noscript><a href='#'><img
+                alt='Happiness '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2H&#47;2HFRRTG74&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='path' value='shared&#47;2HFRRTG74' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2H&#47;2HFRRTG74&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+          </object></div>
+        <script
+          type='text/javascript'>                    var divElement = document.getElementById('viz1653668618938'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1227px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
       </div>
     </div>
-    <div class=col-lg-10>
-      <div class='tableauPlaceholder' id='viz1653145656612' style='position: relative'><noscript><a href='#'><img
-              alt='Happiness '
-              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wo&#47;WorldHappinessPrediction&#47;Happiness&#47;1_rss.png'
-              style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-          <param name='embed_code_version' value='3' />
-          <param name='site_root' value='' />
-          <param name='name' value='WorldHappinessPrediction&#47;Happiness' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='static_image'
-            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wo&#47;WorldHappinessPrediction&#47;Happiness&#47;1.png' />
-          <param name='animate_transition' value='yes' />
-          <param name='display_static_image' value='yes' />
-          <param name='display_spinner' value='yes' />
-          <param name='display_overlay' value='yes' />
-          <param name='display_count' value='yes' />
-          <param name='language' value='en-US' />
-          <param name='filter' value='publish=yes' />
-        </object></div>
-      <script
-        type='text/javascript'>                    var divElement = document.getElementById('viz1653145656612'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1227px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-      <br>
+
+    <div class="regional-chart">
+      <div class="col-lg-5">
+        <div class='tableauPlaceholder' id='viz1653668849508' style='position: relative'><noscript><a href='#'><img
+                alt='Happiness_distribution '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ha&#47;happiness-region-distribution&#47;Happiness_distribution&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='happiness-region-distribution&#47;Happiness_distribution' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ha&#47;happiness-region-distribution&#47;Happiness_distribution&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+          </object></div>
+        <script
+          type='text/javascript'>                    var divElement = document.getElementById('viz1653668849508'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '827px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      </div>
     </div>
-    <!-- <DISPALY Horizontal Bar Chart> -->
-    <div class="col-md-5">
-      <div id="bar"></div>
-    </div>
+
+
+
+
 
 
 
