added overflow to css

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
       <!---->
       <div class="row">
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-md-5 col-sm-5">
           <div class="summary-shape">
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="summary-title">
                   <h1><strong><u>OverView</u></strong></h1>
                   <h3><strong>A Little Breakdown:</strong></h3>
@@ -118,7 +118,7 @@
         </div>
         <!-- <DISPALY Gauge Chart> -->
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="guage">
               <div id="gauge"></div>
             </div>
@@ -129,7 +129,7 @@
 
     <!-- <DISPALY Tableau> -->
     <div class="info-map-chart">
-      <div class="col-lg-6">
+      <div class="col-lg-5 col-md-5 col-sm-5">
         <div class='tableauPlaceholder' id='viz1653668618938' style='position: relative'><noscript><a href='#'><img
                 alt='Happiness '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2H&#47;2HFRRTG74&#47;1_rss.png'
@@ -153,7 +153,7 @@
     </div>
 
     <div class="regional-chart">
-      <div class="col-lg-5">
+      <div class="col-lg-5 col-md-5 col-sm-5">
         <div class='tableauPlaceholder' id='viz1653668849508' style='position: relative'><noscript><a href='#'><img
                 alt='Happiness_distribution '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ha&#47;happiness-region-distribution&#47;Happiness_distribution&#47;1_rss.png'
