--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <!-- <DISPALY Tableau> -->
     <div class="info-map-chart">
       <div class="col-lg-5 col-md-5 col-sm-5">
-        <div class='tableauPlaceholder' id='viz1653668618938' style='position: relative'><noscript><a href='#'><img
+        <div class='tableauPlaceholder-info' id='viz1653668618938' style='position: relative'><noscript><a href='#'><img
                 alt='Happiness '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2H&#47;2HFRRTG74&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -146,7 +146,8 @@
             <param name='display_overlay' value='yes' />
             <param name='display_count' value='yes' />
             <param name='language' value='en-US' />
-          </object></div>
+          </object>
+        </div>
         <script
           type='text/javascript'>                    var divElement = document.getElementById('viz1653668618938'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1227px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
       </div>
@@ -154,7 +155,7 @@
 
     <div class="regional-chart">
       <div class="col-lg-5 col-md-5 col-sm-5">
-        <div class='tableauPlaceholder' id='viz1653668849508' style='position: relative'><noscript><a href='#'><img
+        <div class='tableauPlaceholder-regional' id='viz1653668849508' style='position: relative'><noscript><a href='#'><img
                 alt='Happiness_distribution '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ha&#47;happiness-region-distribution&#47;Happiness_distribution&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
