minor edits to webpage

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <menu>
       <!-- Navigation-->
 
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container px-4 px-lg-5">
+      <nav class="navbar navbar-light navbar-static-top" id="mainNav">
+        <div class="container-fluid px-4 px-lg-5">
           <img src="static/images/globe.svg" width="100" height="100" class="logo" alt="">
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
@@ -90,28 +90,22 @@
                 <div class="summary-text">
                   <br>
                   <h5><b>Our Goal</b></h5>
-                  <p>We are Group 4:Error 404, we undertook the task of trying to understan the influential factors
-                    impacting the happiness of a
-                    country while determing the accuracy of such factors and claims.The factors in question are:<em>
-                      LOGGED
-                      GDP PER CAPITA, SOCIAL SUPPORT,
-                      HEALTHY LIFE EXPECTANCY, FREEDOM TO MAKE LIFE CHOICES, GENEROSITY, PERCEPTIONS OF CORRUPTION,
-                      INDEX
-                      OF INSTITUTIONAL TRUST,
-                      GINI COEFFICIENT OF INCOME(leves of income inequality),</em> and <em>UNEMP_SCORE(Unemployment
-                      rating at given
+                  <p>We are Group 4:Error 404, we undertook the task of trying to understand the influential factors
+                    impacting the happiness of a country while determining the accuracy of such factors and claims. The
+                    factors in question are:<em> LOGGED GDP PER CAPITA, SOCIAL SUPPORT, HEALTHY LIFE EXPECTANCY, FREEDOM
+                      TO
+                      MAKE LIFE CHOICES, GENEROSITY, PERCEPTIONS OF CORRUPTION, INDEX OF INSTITUTIONAL TRUST, GINI
+                      COEFFICIENT OF INCOME(levels of income inequality)</em>, and <em>UNEMP_SCORE(Unemployment rating
+                      at given
                       time)</em>.</p>
                   <h5><b>Challenges Faced</b></h5>
                   <p>As we progressed carrying out ETL process for the data we realized our original large data had
-                    shrunk(in number of dimensions) due to the
-                    elimination of unneccessary/noisy data. Although the data being used was relevant and impacted
-                    "Happiness Score" we realized the dilema, information on how the scores were assigned was excluded
-                    from the source as well as, the mathematical
-                    computations and formulas to derive
-                    these results had been made exclusive/confidential. Our effort to find more relevant data that could
-                    impact a country/countries happiness
-                    became a more arduuos task than we realized since we had to ensure the integrity and accuracy of the
-                    data being merged.</p>
+                    shrunk(in number of dimensions) due to the elimination of unnecessary/noisy data. Although the data
+                    being used was relevant and impacted "Happiness Score" we realized the dilemma, information on how
+                    the scores were assigned was excluded from the source as well as, the mathematical computations and
+                    formulas to derive these results had been made exclusive/confidential. Our effort to find more
+                    relevant data that could impact a country/countries happiness became a more arduous task than we
+                    realized since we had to ensure the integrity and accuracy of the data being merged.</p>
                 </div>
               </div>
             </div>
